fix mobile header spacing

--- a/less/mobile-menu.less
+++ b/less/mobile-menu.less
@@ -32,7 +32,7 @@
 	line-height: 1em;
 	color: @mobileTextColor;
 	background-color: #222;
-	z-index: 300;
+	z-index: 800;
 	margin: 0 auto;
 	border-bottom: 40px solid #444;
 	display: none;
